--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -386,10 +386,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|bottom"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layout_dice"
             android:layout_width="wrap_content"
