--- a/app/src/main/res/layout/activity_sheet.xml
+++ b/app/src/main/res/layout/activity_sheet.xml
@@ -55,8 +55,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/layout_SPECIAL"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout_sheet"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_button_pannel">
 
@@ -64,10 +65,6 @@
             android:id="@+id/tv_pseudo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginRight="1dp"
             android:text="@string/tv_pseudo" />
 
         <EditText
@@ -79,46 +76,34 @@
             android:id="@+id/tv_race"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
             android:text="@string/tv_race" />
 
         <TextView
             android:id="@+id/tv_race_choosen"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
             android:text="@string/tv_level" />
 
         <TextView
             android:id="@+id/tv_level_curr"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_exp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
             android:text="@string/tv_exp" />
 
         <TextView
             android:id="@+id/tv_exp_curr"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/button_exp_add"
@@ -129,107 +114,78 @@
             android:text="+" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layout_SPECIAL"
-        android:layout_width="match_parent"
+    <TableLayout
+        android:id="@+id/tableLayout_sheet"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/layout_SPECIAL_add"
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
+        app:layout_constraintBottom_toBottomOf="@id/layout_identity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_identity">
+        app:layout_constraintTop_toTopOf="@id/layout_skills">
 
-        <TextView
-            android:id="@+id/tv_strong"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/tv_strong" />
+        <TableRow android:id="@+id/rowSPECIAL">
 
-        <TextView
-            android:id="@+id/tv_perception"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/tv_perception" />
+            <TextView
+                android:id="@+id/tv_strong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/tv_strong" />
 
-        <TextView
-            android:id="@+id/tv_endurance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/tv_endurance" />
+            <TextView
+                android:id="@+id/tv_perception"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:text="@string/tv_perception" />
 
-        <TextView
-            android:id="@+id/tv_charisma"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/tv_charisma" />
+            <TextView
+                android:id="@+id/tv_endurance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_endurance" />
 
-        <TextView
-            android:id="@+id/tv_intelligence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/tv_intelligence" />
+            <TextView
+                android:id="@+id/tv_charisma"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_charisma" />
 
-        <TextView
-            android:id="@+id/tv_agility"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@string/tv_agility" />
+            <TextView
+                android:id="@+id/tv_intelligence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_intelligence" />
 
-        <TextView
-            android:id="@+id/tv_luck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:text="@string/tv_luck" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_agility"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_agility" />
 
-    <LinearLayout
-        android:id="@+id/layout_SPECIAL_add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/layout_SPECIAL_minus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_SPECIAL" />
+            <TextView
+                android:id="@+id/tv_luck"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_luck" />
+        </TableRow>
 
-    <LinearLayout
-        android:id="@+id/layout_SPECIAL_minus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/layout_skills"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_SPECIAL_add" />
+        <TableRow android:id="@+id/rowAdd" />
+
+        <TableRow android:id="@+id/rowMinus" />
+    </TableLayout>
 
     <LinearLayout
         android:id="@+id/layout_skills"
-        android:layout_width="250dp"
-        android:layout_height="450dp"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/layout_dice"
         app:layout_constraintEnd_toStartOf="@+id/layout_stats"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_SPECIAL_minus">
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout_sheet">
 
         <TextView
             android:id="@+id/tv_skills"
@@ -240,7 +196,7 @@
 
         <ListView
             android:id="@+id/list_skills"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_skill" />
     </LinearLayout>
@@ -257,7 +213,7 @@
         app:layout_constraintBottom_toTopOf="@+id/layout_personal_asset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/layout_skills"
-        app:layout_constraintTop_toBottomOf="@+id/layout_SPECIAL_minus">
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout_sheet">
 
         <LinearLayout
             android:id="@+id/layout_pv"
@@ -269,8 +225,6 @@
                 android:id="@+id/tv_hp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
                 android:text="@string/tv_hp" />
 
             <TextView
@@ -337,8 +291,16 @@
 
             <TextView
                 android:id="@+id/tv_pa_curr"
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/button_pa_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:text="↻" />
         </LinearLayout>
 
         <LinearLayout
@@ -364,14 +326,6 @@
                 android:minWidth="0dp"
                 android:minHeight="0dp"
                 android:text="-" />
-
-            <Button
-                android:id="@+id/button_pa_reset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:text="↻" />
         </LinearLayout>
 
         <LinearLayout
@@ -432,6 +386,7 @@
         android:id="@+id/layout_dice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
