--- a/app/src/main/res/layout/item_skill.xml
+++ b/app/src/main/res/layout/item_skill.xml
@@ -23,10 +23,12 @@
             android:id="@+id/box_personalAsset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
+        <Button
             android:id="@+id/add_skill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
             />
     </LinearLayout>
 </LinearLayout>
