--- a/app/src/main/res/layout/activity_sheet.xml
+++ b/app/src/main/res/layout/activity_sheet.xml
@@ -55,9 +55,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout_sheet"
+        app:layout_constraintBottom_toTopOf="@id/layoutEXP"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_button_pannel">
 
@@ -82,6 +81,17 @@
             android:id="@+id/tv_race_choosen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutEXP"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/layout_identity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tableLayout_sheet"
+        android:gravity="right|bottom">
 
         <TextView
             android:id="@+id/tv_level"
@@ -120,7 +130,7 @@
         android:layout_height="wrap_content"
         android:shrinkColumns="*"
         android:stretchColumns="*"
-        app:layout_constraintBottom_toBottomOf="@id/layout_identity"
+        app:layout_constraintBottom_toBottomOf="@id/layoutEXP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/layout_skills">
@@ -180,7 +190,7 @@
     <LinearLayout
         android:id="@+id/layout_skills"
         android:layout_width="300dp"
-        android:layout_height="400dp"
+        android:layout_height="450dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/layout_dice"
         app:layout_constraintEnd_toStartOf="@+id/layout_stats"
